# labscpi

./: .gitignore  README.md  pyproject.toml  requirements.txt  update_checksums.py
src/labscpi/: __init__.py  eload_scpi.py  oscilloscope_scpi.py  psu_scpi.py  test.py
src/labscpi/rules/: rules_index.json
src/labscpi/rules/0.1.0/: FNCORE_Mock_Spec.md  SCPI_Electronic_Load_API_Contract_v1.md  SCPI_Oscilloscope_API_Contract_v1.md  SCPI_PSU_API_Contract_v1.md  fncore_mockup_client_llm_usage.md
src/labscpi/rules/0.3.0/: FNCORE_Mock_Spec.md  SCPI_Electronic_Load_API_Contract_v1.md
src/labscpi/rules/0.4.0/: Procedure_Macro_DSL_v1.1.md  SCPI_Oscilloscope_API_Contract_v2.md  SCPI_PSU_API_Contract_v1.md  fncore_mockup_client_llm_usage.md
tools/: bump_version.py  make_rules_index.py
